# PostCLI

./: .gitignore  README.md  pyproject.toml
src/postcli/: __init__.py  canvas.py  cli.py  inspection.py  kitty.py  mcp_server.py  models.py  project.py  render.py  templates.py  tui.py
tests/: test_canvas.py  test_inspection.py  test_kitty.py  test_mcp_server.py  test_project_render.py  test_tui.py
